--- a/app/src/main/res/layout/discovery_favorite.xml
+++ b/app/src/main/res/layout/discovery_favorite.xml
@@ -1,6 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/navigation_menu"
+        app:itemIconSize="38dp"
+        app:itemIconTint="@color/white"
+        app:backgroundTint="#93BADD"
+        />
 
     <ImageView
         android:layout_width="match_parent"
@@ -20,7 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:paddingLeft="32dp"
-        android:paddingBottom="64dp">
+        android:paddingBottom="128dp">
 
         <ImageView
             android:layout_width="56dp"
@@ -34,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:paddingBottom="64dp">
+        android:paddingBottom="128dp">
 
 
         <ImageView
@@ -63,7 +75,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:paddingRight="32dp"
-        android:paddingBottom="64dp">
+        android:paddingBottom="128dp">
 
         <ImageView
             android:layout_width="56dp"
@@ -79,5 +91,17 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:paddingRight="32dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:contentDescription="back button"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
+        android:scaleType="fitCenter"
+        android:layout_margin="14dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/return_button"
+        android:onClick="onBackButtonClicked"/>
+
 
 </RelativeLayout>
